--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ body {
 
 
       </form>
-    <form action= "/specficuser" method="post">
+    <form action= "https://hall-eight.vercel.app/specficuser" method="post">
         <h3 style="background-color: aqua;">Get specfic details</h3>
     <div class="elem-group">
         <label for="id">ID</label>
@@ -308,7 +308,7 @@ body {
 
       </form>
       <hr><hr>
-      <form action= "/deletuser" method="post">
+      <form action= "https://hall-eight.vercel.app//deletuser" method="post">
         <h3 style="background-color: aqua;">Delete the User</h3>
     <div class="elem-group">
         <label for="id">ID</label>
@@ -320,7 +320,7 @@ body {
 
 
       <hr><hr>
-    <form action="/addUser" method="post">
+    <form action="https://hall-eight.vercel.app//addUser" method="post">
         <h2 style="background-color: aqua;">Book Hall</h2>
         <div>
             <label for="id">ID</label>
