--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ body {
 
 
       <hr><hr>
-    <form action="https://hall-eight.vercel.app/addUser" method="post">
+    <form action="https://hall-eight.vercel.app//addUser" method="post">
         <h2 style="background-color: aqua;">Book Hall</h2>
         <div>
             <label for="id">ID</label>
