--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ body {
 
       </form>
       <hr><hr>
-      <form action= "https://hall-eight.vercel.app//deletuser" method="post">
+      <form action= "/deletuser" method="post">
         <h3 style="background-color: aqua;">Delete the User</h3>
     <div class="elem-group">
         <label for="id">ID</label>
